log
Sat 10 Sep 2022 01:12:45 AM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
bae760a
Sat 10 Sep 2022 01:18:51 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d1a79b4
Sat 10 Sep 2022 02:05:59 AM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
hashmap.c:43:8: error: ‘insertMap’ defined but not used [-Werror=unused-function]
   43 |   void insertMap(HashMap * map, char * key, void * value) {
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0e8e0c0
Sat 10 Sep 2022 02:06:18 AM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  5|4
total_score: 30/70
3068785
